[package]
name = "unik"
version = "0.2.9"
edition = "2021"
description = "A Powerful Universally Unique Identifier (UUID)"
authors = ["Wahabz <awh6al@yandex.com>"]
documentation = "https://docs.rs/unik"
license = "MIT"
readme = "README.md"
categories = [
    "algorithms",
    "cryptography"
]
keywords = [
    "uuid",
    "unique",
    "global",
    "rand",
]
repository = "https://github.com/awh6al/unik"

[dependencies.mac_address]
version = "1.1.3" 

[dependencies.libc]
version = "0.2.126"
optional = true

[dependencies.nanorand]
version = "0.6.1"
#optional = true

[dependencies.md5]
version = "0.7.0"
optional = true

[dependencies.sha1]
version = "0.6.0"
optional = true

[features]
default = []
v2 = ["libc"]
v3 = ["sha1"]
v5 = ["md5"]

[package.metadata.docs.rs]
all-features = true
