[package]
name = "unik"
version = "0.3.0"
edition = "2021"
description = "A Powerful Universally Unique Identifier (UUID)"
authors = ["Wahabz <awh6al@yandex.com>"]
documentation = "https://docs.rs/unik"
license = "MIT"
readme = "README.md"
categories = [
    "algorithms",
    "cryptography"
]
keywords = [
    "uuid",
    "unique",
    "global",
    "rand",
]
repository = "https://github.com/awh6al/unik"

[lib]
name = "unik"

[dependencies.mac_address]
version = "1.1.4" 
optional = true

[dependencies.libc]
version = "0.2.137"
optional = true

[dependencies.nanorand]
version = "0.7.0"
optional = true
feature = "zeroize"

[dependencies.md5]
version = "0.7.0"
optional = true

[dependencies.sha1]
version = "0.6.0"
optional = true

[dependencies.chrono]
version = "0.4.23"
optional = true

[features]
default = []
v2 = ["libc"]
v3 = ["sha1"]
v5 = ["md5"]
utc = ["chrono"]
mac = ["mac_address"]
rand = ["nanorand"]

[package.metadata.docs.rs]
all-features = true


